--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^1.11.13",
     "react": "^19.1.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4"
